--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,9 @@ android {
 
 dependencies {
 
-    implementation("org.postgresql:postgresql:42.5.1")
+    implementation 'com.github.kittinunf.fuel:fuel:2.3.1'
+    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.2'
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.0'
