--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,15 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".HostActivity"
+            android:exported="false"
+            android:label="@string/title_activity_host"
+            android:theme="@style/Theme.MedickAppMobile.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".NewVitalsActivity"
             android:exported="false">
             <meta-data
